[package]
name = "mongo_acc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"
tokio = "1.12"
bson = "2.1.0"
futures = "0.3.21"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.56"
serde = "1.0.136"